--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^8.20.2",
+    "@react-three/fiber": "^8.0.0-beta.8",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
+    "drei": "^2.2.21",
+    "react": "^18.0.0-rc.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
+    "react-three-fiber": "^6.0.13",
     "react-youtube": "^7.13.1",
+    "three": "^0.139.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
