--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/cannon": "^5.1.0",
     "@react-three/drei": "^8.20.2",
     "@react-three/fiber": "^8.0.0-beta.8",
     "@testing-library/jest-dom": "^5.14.1",
