--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "async": "^3.2.3",
     "drei": "^2.2.21",
     "react": "^18.0.0-rc.3",
     "react-dom": "^17.0.2",
