--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.8.3",
     "async": "^3.2.3",
     "drei": "^2.2.21",
+    "nth-check": "^2.0.1",
     "react": "^18.0.0-rc.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
