--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react": "^18.0.0-rc.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.0",
     "react-three-fiber": "^6.0.13",
     "react-youtube": "^7.13.1",
     "three": "^0.139.0",
     "web-vitals": "^1.1.2"
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
